member/context.py calculates available plectrums for logged in user available for display across site in base and mobile nav bars

--- a/templates/base.html
+++ b/templates/base.html
@@ -139,14 +139,15 @@
                             <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold">
                           </div>
                           <p class="my-0 text-center">
-                            {% if picks_total %}
-                              {{ picks_total }}
-                            {% else %}
-                              0
-                            {% endif %}
+                            <!-- note, plectrum calculation at members/contexts.py -->
+                            {{ user_plec_balance }}
                           </p>
                         </a>
                       </li>
+                    {% else %}  
+
+                    
+
                     {% endif %}
                   </ul> <!--close Shopping Bag and Picks-->
                 </li>
