--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -107,11 +107,16 @@
                                                 <!--Prevent 'Add to Rack' icon being displayed if already on loan-->
                                                 {% if guitar.status == 'Available' %}
                                                     <!--option A : Add to Rack -->
-                                                    <a href="" class="btn btn-sm btn-take align-baseline">
-                                                        <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
-                                                        <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
-                                                        <p class=""><small>Add to Rack</small></p>
-                                                    </a>
+                                                    <form method="POST" action="{% url 'request_guitar' guitar.id %}">
+                                                        {% csrf_token %}
+                                                        <button class="btn btn-sm btn-take align-baseline" type="submit">
+                                                            <!--Pre-hover state-->
+                                                            <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                            <!--Hover state-->
+                                                            <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
+                                                            <p class=""><small>Add to Rack</small></p>
+                                                        </button>
+                                                    </form>
 
                                                     <!--option B : Remove from Rack -->
                                                     <a href="" class="btn btn-sm btn-take d-none align-baseline">
