--- a/site_admin/templates/site_admin/site_admin.html
+++ b/site_admin/templates/site_admin/site_admin.html
@@ -47,7 +47,7 @@
                         </div>
                         <div class="row d-flex justify-content-evenly">
                             <a href="{% url 'list_accounts' %}" class="btn btn-md btn-gold-outline mb-4">Manage Accounts</a>
-                            <a href="" class="btn btn-md btn-gold-outline mb-4">Manage Guitar Loans </a>
+                            <a href="{% url 'list_guitar_loans' %}" class="btn btn-md btn-gold-outline mb-4">Guitar Loan Requests </a>
                         </div>
                     </div>
                     <hr class="mb-0">
