Empty div with min-height fills void when Add to Rack icon is filtered out of render

--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -134,11 +134,11 @@
                                                             <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
                                                             <!--Hover state-->
                                                             <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
-                                                            <p class="p0"><small>Add to Rack</small></p>
+                                                            <p class="p0 mb-0"><small>Add to Rack</small></p>
                                                         </button>
                                                     </form>
                                                 {% else %}
-                                                    <div class="not_available_spacer">
+                                                    <div class="not-available-spacer">
                                                     </div>
                                                 {% endif %}
                                             </li>
