--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,6 +1,5 @@
-<div class="toast custom-toast" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="arrow-up arrow-success"></div>
-    <div class="w-100 toast-capper bg-sucess"></div>
+<div class="toast custom-toast rounded-0 border-top-0" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="w-100 toast-capper bg-success"></div>
     <div class="toast-header bg-white text-dark">
       <strong class="me-auto">Success!</strong>
       <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
