Media query reduces font size on admin tables for small screens

--- a/site_admin/templates/site_admin/list_guitars.html
+++ b/site_admin/templates/site_admin/list_guitars.html
@@ -30,7 +30,7 @@
 
                     <div class="row">
                         <div class="col-12 p-4">
-                            <table class="text-center mx-auto table table-dark table-striped">
+                            <table class="text-center mx-auto table table-dark table-striped admin-table">
                                 <tr class="table-underline">
                                     <th class="">ID</th>
                                     <th class="">Category</th>
