--- a/site_admin/templates/site_admin/accounts.html
+++ b/site_admin/templates/site_admin/accounts.html
@@ -29,7 +29,7 @@
 
                     <div class="row">
                         <div class="col-12 p-4">
-                            <table class="text-center mx-auto table table-dark table-striped">
+                            <table class="text-center mx-auto table table-dark table-striped admin-table">
                                 <tr class="table-underline">
                                     <th class="">Member</th>
                                     <th class="">Order No.</th>
