Add not available icon where Add To Rack not permitted

--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -118,6 +118,12 @@
                                                             <p class="ps-2"><small>Add to Rack</small></p>
                                                         </button>
                                                     </form>
+                                                
+                                                {% else %}
+                                                    <div>
+                                                        <i class="fas fa-ban fa-2x d-block mx-auto"></i>
+                                                        <p class="text-center"><small>Not Available</small></p>
+                                                    </div>
 
                                                 {% endif %}
                                             </li>
