--- a/guitars/templates/guitars/guitars.html
+++ b/guitars/templates/guitars/guitars.html
@@ -138,7 +138,9 @@
                                                         </button>
                                                     </form>
                                                 {% else %}
-                                                    <div class="not-available-spacer">
+                                                    <div>
+                                                        <i class="fas fa-ban fa-2x d-block mx-auto"></i>
+                                                        <p class="text-center"><small>Not Available</small></p>
                                                     </div>
                                                 {% endif %}
                                             </li>
