Add missing img alt tags and unique ids for navbar dropdown

--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -112,9 +112,9 @@
                                                         {% csrf_token %}
                                                         <button class="btn btn-sm btn-take align-bottom" type="submit">
                                                             <!--Pre-hover state-->
-                                                            <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                            <img src="{{ MEDIA_URL }}guitar_gold_add.svg" class="guitar-svg add-gold" alt="add to rack icon">
                                                             <!--Hover state-->
-                                                            <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black">
+                                                            <img src="{{ MEDIA_URL }}guitar_black_add.svg" class="guitar-svg add-black" alt="add to rack icon">
                                                             <p class="ps-2"><small>Add to Rack</small></p>
                                                         </button>
                                                     </form>
