--- a/site_admin/templates/site_admin/list_guitars.html
+++ b/site_admin/templates/site_admin/list_guitars.html
@@ -53,7 +53,7 @@
                                     <td>{{ guitar.status }}</td>
                                     <td>
                                         <a href="{{ guitar.image_id.url }}" target="_blank">
-                                            <img src="{{ guitar.image_id.url }}" class="list-image">
+                                            <img src="{{ guitar.image_id.url }}" class="list-image" alt="guitar image">
                                         </a>
                                     </td>
                                     <td>
