--- a/templates/includes/mobile-nav-items.html
+++ b/templates/includes/mobile-nav-items.html
@@ -61,7 +61,7 @@
             <li class="list-inline-item">
               <a class="ivory-txt gold-accent-txt" href="">
                 <div class="text-center">
-                  <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold">
+                  <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold" alt="plectrum balance">
                 </div>
                 <p class="my-0 text-center">
                   <!-- note, plectrum calculation at members/contexts.py -->
