--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
 
             <!--Logo-->
             <div class="col-0 col-md-3 align-self-start my-auto py-2 d-none d-md-block">
-              <img class="navbar-logo" src="{{ MEDIA_URL }}gv-logo.png"/>
+              <img class="navbar-logo" src="{{ MEDIA_URL }}gv-logo.png" alt="logo"/>
             </div>
 
             <!--Site Title-->
@@ -136,7 +136,7 @@
                       <li class="list-inline-item text-center">
                         <a class="ivory-txt gold-accent-txt" href="">
                           <div class="text-center">
-                            <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold">
+                            <img src="{{ MEDIA_URL }}guitarpick.svg" class="guitar-svg add-gold" alt="plectrum balance">
                           </div>
                           <p class="my-0 text-center">
                             <!-- note, plectrum calculation at members/contexts.py -->
